<resources>
    <string name="app_name">Aero India International Seminar</string>
    <string name="seconds">Seconds</string>
    <string name="minutes">Minutes</string>
    <string name="hours">Hours</string>
    <string name="days">Days</string>
    <string name="home">Home</string>
    <string name="message_from_chairman">Message From Chairman</string>
    <string name="seminar">Seminar</string>
    <string name="schedule">Programme Schedule</string>
    <string name="speakers">Speakers</string>
    <string name="registration">Registration</string>
    <string name="sponsorship">Sponsorship</string>
    <string name="venue">Venue</string>
    <string name="contact">Contact</string>
    <string name="faq">FAQ</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string-array name="faq_questions">
        <item>When will the seminar take place? Where is it located?</item>
        <item>How can I register? What are the registration rates?</item>
        <item>I only want to attend one day of the conference, is that possible?</item>
        <item>I just want to attend one session. Is that possible to do without registering for the conference?</item>
        <item>What is the cancellation policy for the conference?</item>
        <item>Is the registrations are transferable?</item>
        <item>Who should attend the conference?</item>
        <item>Does my registration allow me to access all conference areas and events? What does my registration include?</item>
        <item>Is the seminar schedule available?</item>
        <item>I am an overseas participant and need a letter of invitation before I can receive my visa. What is the procedure?</item>
        <item>What should I wear?</item>
        <item>What services are available for special needs and requests?</item>
        <item>What shuttle services and transportation is available?</item>
        <item>My question is not listed here. Whom do I contact?</item>
        <item>Who do I contact if I have a complaint?</item>
        <item>Can I advertise in the seminar program? </item>
        <item>How can my organization become a seminar sponsor?</item>
        <item>Is accommodation for the DRDO Delegates booked?</item>
        <item>Is the hotel rooms blocked for the delegates?</item>
        <item>Do I need to book the hotels immediately?</item>
        <item>How can I reserve a hotel room, and what are the rates?</item>
        <item>What else is there to do outside of the conference? What should I be doing when the conference day ends?</item>
    </string-array>
    <string-array name="faq_answers">
        <item>The AeroIndia International Seminar 2019 will take place February 18th &amp; 19th, 2019 at the Royal Orchid Resort &amp; Convention Centre, Jakkur Flying Club, Near, Bellary Rd, Allalasandra, Yelahanka, Bengaluru, Karnataka 560065</item>
        <item>Please visit the registration page for deadlines, rates, and other registration information.</item>
        <item>No, one-day seminar registration is not available. Please note that your registration is valid for all sessions and events on  both  the days.</item>
        <item>Individuals wanting to participate in one session must register for two days. AIS 2019 does not allow unregistered attendees to come to sessions or other seminar events.</item>
        <item>No refund will be issued for cancellations. AIS 2019 is not responsible for problems beyond our control such as weather conditions, campus conditions, travel difficulties, visa problems, health issues, etc.</item>
        <item>No, the registrations are not transferable.</item>
        <item>Please refer the theme of AIS 2019 and we recommend Professionals, academicians and students who are interested in aerospace domain.</item>
        <item>Your registration will give you access to all speaker sessions, events and the exhibit hall, but you need to be wearing your badge at all times. We have tea/coffee and snacks at every break and lunch. Veg and Non-Veg food are severed during lunch and no special request will be permitted for change of menu.</item>
        <item>Details will be posted on our website and Android app as and when they are confirmed. A full seminar schedule, including seminar sessions, will be available on our website and Android app.</item>
        <item>Please contact secretary@aeroindiaseminar.com for assistance.</item>
        <item>There is no official dress code for the seminar. Most attendees wear business attire or business casual attire during their time at the conference.</item>
        <item>We encourage persons with disabilities to participate in their programs and activities. Please contact secretary@aeroindiaseminar.com no later than January 30, 2019.</item>
        <item>No. All delegates are requested to make their own arrangements. However, cabs(Radio taxies) are easily available near the venue.</item>
        <item>Please contact secretary@aeroindiaseminar.com for assistance.</item>
        <item>Please contact secretary@aeroindiaseminar.com for assistance.</item>
        <item>Yes, please contact secretary@aeroindiaseminar.com to make arrangements.</item>
        <item>Sponsorship opportunities are limited, so act today. To become a sponsor please visit the sponsor page</item>
        <item>No. Estate Management Unit (EMU) Bengaluru may be contacted to book DRDO guest house for DRDO delegates.</item>
        <item>No rooms have been blocked, by the seminar management committee for the guests in the hotels. However discounted rates has been negotiated with few hotels as given in accommodation page.</item>
        <item>Guests are requested to book the hotels well in advance due to heavy rush for Aero India show during same week.</item>
        <item>Please visit Royal Orchid Resort &amp; Convention Centre, the page for information. Delegates may book hotel rooms directly. Optionally delegates may choose to stay  in hotels as per their convenience. Tips: Ask for special rates for delegates for conference. !!!</item>
        <item>Aero India Exhibition which is organised every two years has already carved a niche for itself globally as a premier aerospace exhibition.</item>
        <item>Exhibition is scheduled on 20&#8211;24 Feb 2019. Visit https://aeroindia.gov.in/Aero&#8211;India for more details</item>
    </string-array>
    <string-array name="theme_topics">
        <item>Plenary Session</item>
        <item>Aerospace Materials/Stealth</item>
        <item>Hypersonics</item>
        <item>Artificial Intelligence/Deep Learning in Aerospace</item>
        <item>Sensors/Avionics</item>
        <item>Propulsion: Missile</item>
        <item>Propulsion: Space</item>
        <item>Propulsion: Gas Turbine</item>
        <item>UAV/UCAV/Stealth</item>
    </string-array>
    <string name="registration_about_1">Registration Information</string>
    <string name="registration_about_2">1. Spot Registration at the venue is not permitted.\n2. Online Registration is currently available for Student and Private Industry/Academic Faculty Delegates.\n3. Cancellation, transfer or refund of registration fee paid is not allowed.\n4. For any assistance, kindly mail to registration@aeroindiaseminar.com.\n5. Individuals can register either as DRDO delegate / Industry delegate/ Academia delegate(Teaching professional) /  Student delegate as per registration mode listed underneath.</string>
    <string name="registration_grid_00">Delegate Type</string>
    <string name="registration_grid_01">Registration Mode</string>
    <string name="registration_grid_10">DRDO Delegate</string>
    <string name="registration_grid_11">1. Nomination through Point of Contact (PoC) under respective DG cluster\n2. Nomination through respective Lab Director</string>
    <string name="registration_grid_20">Industry Delegate\n(Indian &amp; International)</string>
    <string name="registration_grid_21">1. Nomination through Point of Contact (PoC) under respective DG cluster\n2. Nomination through respective Company HR or Head (to whom Aero India Seminar office have sent request letter or interacted for nomination of delegate).</string>
    <string name="registration_grid_30">Academia Delegate</string>
    <string name="registration_grid_31">Nomination through respective Institute Head (to whom Aero India Seminar office have sent request letter or interacted for nomination of delegate)</string>
    <string name="registration_grid_2">Delegate Fees</string>
    <string name="registration_grid_2_00">Indian Delegate</string>
    <string name="registration_grid_2_01">Rs. 10,000/-</string>
    <string name="registration_grid_2_10">Foreign Delegate</string>
    <string name="registration_grid_2_11">USD 800/-</string>
    <string name="registration_grid_2_20">Student Delegate (Indian)</string>
    <string name="registration_grid_2_21">Rs. 3,000/-</string>
    <string name="registration_payment_header">Bank Details For Online Transfer</string>
    <string name="registration_payment_grid_00">Bank Name</string>
    <string name="registration_payment_grid_01">STATE BANK OF INDIA</string>
    <string name="registration_payment_grid_10">Branch</string>
    <string name="registration_payment_grid_11">C.V. RAMAN NAGAR, BANGALORE 560 093</string>
    <string name="registration_payment_grid_20">Current Account</string>
    <string name="registration_payment_grid_21">CHAIRMAN, AERO INDIA SEMINAR 2019</string>
    <string name="registration_payment_grid_30">Account Number</string>
    <string name="registration_payment_grid_31">38 15 66 29 564</string>
    <string name="registration_payment_grid_40">IFSC Code</string>
    <string name="registration_payment_grid_41">SBIN0003994</string>
    <string name="registration_payment_grid_50">Swift Code</string>
    <string name="registration_payment_grid_51">SBININBB147</string>
    <string name="registration_payment_grid_60">MICR NO</string>
    <string name="registration_payment_grid_61">560002030</string>
    <string name="sl_silver">Silver Level</string>
    <string name="sl_silver_price">\u20B9 4.2 Lakhs</string>
    <string name="benefits_header">Benefits to Sponsors</string>
    <string name="sponsorship_benefit_1">Logo in the Main backdrop of the Auditorium</string>
    <string name="sponsorship_benefit_2">Logo on Seminar Website</string>
    <string name="sponsorship_benefit_3">Free Advertisement in Souvenir</string>
    <string name="sponsorship_benefit_4">Corporate literature in the delegate kit</string>
    <string name="sponsorship_benefit_5">Video display and logo in back drop at the conference dinner venue</string>
    <string name="sponsorship_benefit_6">Free Registration for delegates</string>
    <string name="sponsorship_benefit_7">Linking the sponsors website in seminar website</string>
    <string name="sponsorship_benefit_8">Kiosk / Stall</string>
    <string name="half_page">Half Page</string>
    <string name="additional_cost">With additional cost of \u20B9 50000/-</string>
</resources>