<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".sponsorship.SilverFragment"
    android:orientation="vertical"
    android:layout_gravity="center_horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="100"
        android:background="@drawable/image_border">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="95"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sl_silver"
                android:layout_marginTop="15dp"
                android:textColor="@color/colorWhite"
                android:textSize="22sp"
                android:textStyle="bold"
                android:background="@drawable/image_border"
                android:layout_gravity="center_horizontal"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sl_silver_price"
                android:textColor="@color/colorWhite"
                android:textSize="16sp"
                android:textStyle="bold"
                android:background="@drawable/image_border"
                android:layout_gravity="center_horizontal"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:gravity="end|top">

            <ImageView
                android:id="@+id/silver_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|top"
                android:src="@drawable/round_close_white_18dp"
                android:clickable="true"
                android:focusable="true"/>


        </LinearLayout>
    </LinearLayout>



    <GridLayout
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="8"
        android:layout_gravity="center"
        android:background="@drawable/table_border"
        android:layout_marginTop="20dp"
        android:paddingBottom="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textSize="14sp"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/colorWhite"
            android:text="@string/benefits_header"
            android:background="@drawable/image_border"
            android:layout_columnSpan="2" />

        <TextView
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="@color/colorGrayDark"
            android:text="@string/sponsorship_benefit_1"
            android:padding="3dp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="@color/colorGrayDark"
            android:layout_gravity="center"
            android:drawableTop="@drawable/green_check"
            android:padding="3dp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="@color/colorGrayDark"
            android:text="@string/sponsorship_benefit_2"
            android:padding="3dp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="@color/colorGrayDark"
            android:layout_gravity="center"
            android:drawableTop="@drawable/green_check"
            android:padding="3dp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="@color/colorGrayDark"
            android:text="@string/sponsorship_benefit_3"
            android:padding="3dp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="@string/half_page"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            android:layout_gravity="center"
            android:drawableTop="@drawable/green_check"
            android:padding="3dp"/>

        <TextView
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="@color/colorGrayDark"
            android:text="@string/sponsorship_benefit_4"
            android:padding="3dp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="@color/colorGrayDark"
            android:layout_gravity="center"
            android:drawableTop="@drawable/green_check"
            android:padding="3dp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="@color/colorGrayDark"
            android:text="@string/sponsorship_benefit_5"
            android:padding="3dp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="@color/colorGrayDark"
            android:layout_gravity="center"
            android:drawableTop="@drawable/red_cancel"
            android:padding="3dp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="@color/colorGrayDark"
            android:text="@string/sponsorship_benefit_5"
            android:padding="3dp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="@color/colorGrayDark"
            android:layout_gravity="center"
            android:drawableTop="@drawable/green_check"
            android:padding="3dp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="@color/colorGrayDark"
            android:text="@string/sponsorship_benefit_6"
            android:padding="3dp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/colorPrimaryDark"
            android:layout_gravity="center"
            android:text="2"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="@color/colorGrayDark"
            android:text="@string/sponsorship_benefit_7"
            android:padding="3dp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="@color/colorGrayDark"
            android:layout_gravity="center"
            android:drawableTop="@drawable/green_check"
            android:padding="3dp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="@color/colorGrayDark"
            android:text="@string/sponsorship_benefit_8"
            android:padding="3dp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="@color/colorPrimaryDark"
            android:layout_gravity="center"
            android:text="@string/additional_cost"
            android:textStyle="bold"/>

    </GridLayout>




</LinearLayout>